Corrected some overflows

--- a/style.css
+++ b/style.css
@@ -177,8 +177,9 @@ nav ul li a{
     position: relative;
     font-weight: bold;
     margin: 0px 0px 15px;
+    overflow-y: hidden;
 }
-
+ 
 .hero-wrap .container .hi-there::after{
     position: absolute;
     bottom: -5px;
@@ -187,7 +188,7 @@ nav ul li a{
     content: '';
     border-style: solid;
     border-width: 5px 5px 0 5px;
-    border-color: var(--secondary-Color) transparent transparent transparent;
+    border-color: firebrick transparent transparent transparent;
 }
 
 .hero-wrap .container h1{
@@ -204,7 +205,6 @@ nav ul li a{
 
 .hero-wrap .container p{
     margin: 10px 0px 0px;
-    line-height: 1.5rem;
 }
 
 /* About Section */
@@ -217,6 +217,7 @@ nav ul li a{
     width: 48%;
     height: 80vh;
     position: relative;
+    overflow-y: hidden;
 }
 
 .about .about-image img{
@@ -463,6 +464,10 @@ footer ul li a{
     color: var(--primary-Color);
 }
 
+i, .contact .contact-image img{
+    overflow-y: hidden;
+}
+
 @media only screen and (max-width: 991px) {
     .w-50{
         width: 75%;
@@ -540,7 +545,7 @@ footer ul li a{
 
     .hero-wrap .container p{
         width: 90% !important;
-        margin: 20px auto 10px;
+        margin: 20px auto 10px !important;
     }
 
     .about, .services, .portfolio-section, .contact form, .contact .contact-image{
