--- a/test.css
+++ b/test.css
@@ -6,7 +6,7 @@
     background: #02325f;
     top: 20px;
     bottom: 20px;
-    margin-left: 29px;
+    margin-left: 39px;
 }
 .job-profile-cont .job-profile {
     position: relative;
@@ -17,7 +17,7 @@
 }
 .job-profile-cont .job-profile .job-profile-inner {
     position: relative;
-    margin-left: -8px;
+    margin-left: 0px;
     width: 100%;
 }
 .job-profile-cont .job-profile .job-profile-inner .timeline-icon {
@@ -30,7 +30,7 @@
     box-shadow: 0 0 0 5px #f2f3f7;
     line-height: 15px;
     float: left;
-    margin: 8px 0px 0px;
+    margin: 5px 0px 0px;
 }
 .job-profile-cont .job-profile .job-profile-inner .timeline-icon i{
     color: #fff;
@@ -68,6 +68,6 @@
     background: #02325f;
     width: 20px;
     height: 20px;
-    margin-left: -1px;
-    margin-top: -10px;
+    margin-left: 1px;
+    margin-top: 5px;
 }
